--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-APP_URL=http://localhost:3333
+init=npm install
 
-MONGO_URL=mongodb+srv://<username>:<password>@kitnet-x03i0.mongodb.net/test?retryWrites=true&w=majority
-
-
-ATORAGE_TYPE=local
+start=npm start
